--- a/html/shop.html
+++ b/html/shop.html
@@ -82,7 +82,7 @@
             </div>
             <div class="text">
                 <div class="desc">
-                    <p>THE BANANA IS RECOMMENDED FOR PEOPLE THAT WANT TO PARTY FOR AN HOUR OR TWO, YOU’LL PARTY LIKE NO ONE ELSE AND WAKE UP FRESH AS THE AIR IN THE CARIBBEAN, <span class="mark">CONTAINS 50MG VITAMIN B6 PER FRUIT</span></p>
+                    <p><span class="title">BANANA: </span> THE BANANA IS RECOMMENDED FOR PEOPLE THAT WANT TO PARTY FOR AN HOUR OR TWO, YOU’LL PARTY LIKE NO ONE ELSE AND WAKE UP FRESH AS THE AIR IN THE CARIBBEAN, <span class="mark">CONTAINS 50MG VITAMIN B6 PER FRUIT</span></p>
                 </div>
                 <div class="price">
                     <p>0.0032BTC / 0.0903 ETH</p>
@@ -100,7 +100,7 @@
             </div>
             <div class="text">
                 <div class="desc">
-                    <p>YOU WANTO TO PARTY ALL NIGHT LONG, AND THE FOLLOWING DAY AS WELL? CHECK OUT THE BLUEBERRY, OUR BEST-SELLING AND HIGHEST-RATED PRODUCT. WE ARE THE ONLY RESELLERS OF THIS PREMIUM PILL, SO DON’T MISS OUT ON THIS OPPORTUNITY! <span class="mark">CONTAINS 100MG VITAMIN K1 PER FRUIT</span></p>
+                    <p><span class="title">BLUEBERRY: </span>YOU WANTO TO PARTY ALL NIGHT LONG, AND THE FOLLOWING DAY AS WELL? CHECK OUT THE BLUEBERRY, OUR BEST-SELLING AND HIGHEST-RATED PRODUCT. WE ARE THE ONLY RESELLERS OF THIS PREMIUM PILL, SO DON’T MISS OUT ON THIS OPPORTUNITY! <span class="mark">CONTAINS 100MG VITAMIN K1 PER FRUIT</span></p>
                 </div>
                 <div class="price">
                     <p>0.0029 BTC / 0.1114 ETH</p>
@@ -118,7 +118,7 @@
             </div>
             <div class="text">
                 <div class="desc">
-                    <p>GREAT QUALITY AT AN AFFORDABLE PRICE RECOMMENDED FOR BEGINNERS, THE GRAPEFRUIT WILL TAKE YOU TO WONDERLAND, AND OFFER YOU A GREAT FIRST EXPERIENCE. FIND OUT HOW DEEP THE RABBIT HOLE GOES CLEAN, HIGH QUALITY MDMA GUARANTEED <span class="mark">CONTAINS 120MG VITAMIN A PER FRUIT</span></p>
+                    <p><span class="title">GRAPEFRUIT:</span>GREAT QUALITY AT AN AFFORDABLE PRICE RECOMMENDED FOR BEGINNERS, THE GRAPEFRUIT WILL TAKE YOU TO WONDERLAND, AND OFFER YOU A GREAT FIRST EXPERIENCE. FIND OUT HOW DEEP THE RABBIT HOLE GOES CLEAN, HIGH QUALITY MDMA GUARANTEED <span class="mark">CONTAINS 120MG VITAMIN A PER FRUIT</span></p>
                 </div>
                 <div class="price">
                     <p>0.0013 BTC / 0.0523 ETH</p>
@@ -136,7 +136,7 @@
             </div>
             <div class="text">
                 <div class="desc">
-                    <p>GUAVA IS A TOP SELLING FRUIT, THAT MAKES YOU SMILE FOR HOURS, PERFECT FOR A HIGH SCHOOL PARTY. WE ARE THE ONLY RESELLERS OF THE LIMITED EDITION SPECIAL, SO DON’T MISS OUT ON THIS OPPORTUNITY. <span class="mark">CONTAINS 65MG VITAMIN C PER FRUIT</span></p>
+                    <p><span class="title">GUAVA:</span>GUAVA IS A TOP SELLING FRUIT, THAT MAKES YOU SMILE FOR HOURS, PERFECT FOR A HIGH SCHOOL PARTY. WE ARE THE ONLY RESELLERS OF THE LIMITED EDITION SPECIAL, SO DON’T MISS OUT ON THIS OPPORTUNITY. <span class="mark">CONTAINS 65MG VITAMIN C PER FRUIT</span></p>
                 </div>
                 <div class="price">
                     <p>0.0021BTC / 0.0353 ETH</p>
@@ -154,7 +154,7 @@
             </div>
             <div class="text">
                 <div class="desc">
-                    <p>THE KIWI IS ONLY RECOMMENDEN TO EXPERIENCED USERS AS ITS THE STRONGEST PILL IN OUR SELECTION, IF YOU FEEL READY FOR IT THOUGH, IT WILL BE AN EXPERIENCE LIKE NOTHING ELSE, <span class="mark">CONTAINS 150MG VITAMIN C PER FRUIT</span></p>
+                    <p><span class="title">KIWI:</span>THE KIWI IS ONLY RECOMMENDEN TO EXPERIENCED USERS AS ITS THE STRONGEST PILL IN OUR SELECTION, IF YOU FEEL READY FOR IT THOUGH, IT WILL BE AN EXPERIENCE LIKE NOTHING ELSE, <span class="mark">CONTAINS 150MG VITAMIN C PER FRUIT</span></p>
                 </div>
                 <div class="price">
                     <p>0.0032BTC / 0.0903 ETH</p>
@@ -172,7 +172,7 @@
             </div>
             <div class="text">
                 <div class="desc">
-                    <p>THE BANANA IS RECOMMENDED FOR PEOPLE THAT WANT TO PARTY FOR AN HOUR OR TWO, YOU’LL PARTY LIKE NO ONE ELSE AND WAKE UP FRESH AS THE AIR IN THE CARIBBEAN, <span class="mark">CONTAINS 50MG VITAMIN B6 PER FRUIT</span></p>
+                    <p><span class="title">LIME:</span>THE BANANA IS RECOMMENDED FOR PEOPLE THAT WANT TO PARTY FOR AN HOUR OR TWO, YOU’LL PARTY LIKE NO ONE ELSE AND WAKE UP FRESH AS THE AIR IN THE CARIBBEAN, <span class="mark">CONTAINS 50MG VITAMIN B6 PER FRUIT</span></p>
                 </div>
                 <div class="price">
                     <p>0.0044 BTC / 0.1667 ETH</p>
@@ -190,7 +190,7 @@
             </div>
             <div class="text">
                 <div class="desc">
-                    <p>IKEA’S FAMOUS, DELICIOUS WHEN SQUISHED INTO JUICE. IMPORTED FROM SWEDEN, WE’RE THE ONLY ONES THAT SELL LINGONBERRIES. <span class="mark">CONTAINS 35MG VITAMIN E PER FRUIT</span></p>
+                    <p><span class="title">LINGONBERRY</span>IKEA’S FAMOUS, DELICIOUS WHEN SQUISHED INTO JUICE. IMPORTED FROM SWEDEN, WE’RE THE ONLY ONES THAT SELL LINGONBERRIES. <span class="mark">CONTAINS 35MG VITAMIN E PER FRUIT</span></p>
                 </div>
                 <div class="price">
                     <p>0.0036BTC / 0.0453 ETH</p>
@@ -208,7 +208,7 @@
             </div>
             <div class="text">
                 <div class="desc">
-                    <p>SWEET, FRUITY, FRESH. PERFECT FOR WARM CLIMATE PARTIES. NOT RECOMMENED FOR BEGINNERS. <span class="mark">CONTAINS 200MG VITAMIN A PER FRUIT</span></p>
+                    <p><span class="title">MANGO:</span>SWEET, FRUITY, FRESH. PERFECT FOR WARM CLIMATE PARTIES. NOT RECOMMENED FOR BEGINNERS. <span class="mark">CONTAINS 200MG VITAMIN A PER FRUIT</span></p>
                 </div>
                 <div class="price">
                     <p>0.0043 BTC / 0.0553 ETH</p>
@@ -226,7 +226,7 @@
             </div>
             <div class="text">
                 <div class="desc">
-                    <p>SNOOP DOGG ONCE SAID “OHH I NEED A PAPAYA”, THE PAPAYA MAKES YOU GO FROM ZERO TO HERO, EVERYTHING IS FUNNY AND FLOATING ON A CLOUD. <span class="mark">CONTAINS 235MG VITAMIN C PER FRUIT</span></p>
+                    <p><span class="title">PAPAYA:</span>SNOOP DOGG ONCE SAID “OHH I NEED A PAPAYA”, THE PAPAYA MAKES YOU GO FROM ZERO TO HERO, EVERYTHING IS FUNNY AND FLOATING ON A CLOUD. <span class="mark">CONTAINS 235MG VITAMIN C PER FRUIT</span></p>
                 </div>
                 <div class="price">
                     <p>0.0062BTC / 0.1053 ETH</p>
@@ -244,7 +244,7 @@
             </div>
             <div class="text">
                 <div class="desc">
-                    <p>THE PASSION FRUIT IS OUR GO TO RECOMMENDATION FOR A NIGHT FULL OF FLUFFY HAPPINESS WITH IT’S DOSE OPTIMIZED FOR AROUND SIX HOURS OF PERFECT ECSTASY EXPERIENCE. <span class="mark">CONTAINS 70MG VITAMIN A PER FRUIT</span></p>
+                    <p><span class="title">PASSION FRUIT:</span>THE PASSION FRUIT IS OUR GO TO RECOMMENDATION FOR A NIGHT FULL OF FLUFFY HAPPINESS WITH IT’S DOSE OPTIMIZED FOR AROUND SIX HOURS OF PERFECT ECSTASY EXPERIENCE. <span class="mark">CONTAINS 70MG VITAMIN A PER FRUIT</span></p>
                 </div>
                 <div class="price">
                     <p>0.0021 BTC / 0.0802 ETH</p>
@@ -262,7 +262,7 @@
             </div>
             <div class="text">
                 <div class="desc">
-                    <p>THE STRAWBERRY, A PERFECT SNACK FOR WORK, YOU’LL FALL IN LOVE WITH THE ENERGY IT GIVES YOU. <span class="mark">CONTAINS 125MG VITAMIN C PER FRUIT</span></p>
+                    <p><span class="title">STRAWBERRY:</span>THE STRAWBERRY, A PERFECT SNACK FOR WORK, YOU’LL FALL IN LOVE WITH THE ENERGY IT GIVES YOU. <span class="mark">CONTAINS 125MG VITAMIN C PER FRUIT</span></p>
                 </div>
                 <div class="price">
                     <p>0.0012BTC / 0.0253 ETH</p>
@@ -280,10 +280,10 @@
             </div>
             <div class="text">
                 <div class="desc">
-                    <p>THA WATERMELON IS PRACTICALLY JUST WATER, BUT IT’S SWEET AND MAKES YOU PARTY FOR HOURS STRAIGHT. <span class="mark">CONTAINS 12MG VITAMIN C PER FRUIT</span></p>
+                    <p><span class="title">WATERMELON:</span>THE WATERMELON IS PRACTICALLY JUST WATER, BUT IT’S SWEET AND MAKES YOU PARTY FOR HOURS STRAIGHT. <span class="mark">CONTAINS 12MG VITAMIN C PER FRUIT</span></p>
                 </div>
                 <div class="price">
-                    <p>0.00122BTC / 0.0853 ETH</p>
+                    <p>0.0122BTC / 0.0853 ETH</p>
                 </div>
             </div>
         </div>
